# ceia-aprendizaje-de-maquina

./: .gitignore  pyproject.toml
clase2/jupyter_notebooks/: 1 - Medidas de distancia.ipynb  2 - Clasificacion.ipynb  3 - Hiper-parametros.ipynb  4 - Optimizacion bayesiana.ipynb  5 - Framework Optuna.ipynb
clase3/jupyter_notebooks/: 1 - SVM (Clasificacion).ipynb  2 - Caso práctico.ipynb  3 - SVM (Regresion).ipynb
clase5/jupyter_notebooks/: bagging_boosting.ipynb  ensamble.ipynb
