[project]
name = "aprmaqi-ceia"
version = "0.1.0"
description = ""
authors = [
    {name = "Facundo Adrián Lucianna", email = "facundolucianna@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
[tool.pyright]
extraPaths = [
    "clase2/jupyter_notebooks",
    "clase3/jupyter_notebooks",
    "clase4/jupyter_notebooks",
    "clase5/jupyter_notebooks",
    "clase6/jupyter_notebooks",
    "clase7/jupyter_notebooks"
]

[tool.ty.environment]
extra-paths = [
    "clase2/jupyter_notebooks",
    "clase3/jupyter_notebooks",
    "clase4/jupyter_notebooks",
    "clase5/jupyter_notebooks",
    "clase6/jupyter_notebooks",
    "clase7/jupyter_notebooks"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


